Configure the Dbcontext

--- a/GitAssessment.Api/appsettings.json
+++ b/GitAssessment.Api/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "AppDbContext": "Host=127.0.0.1;Database=GitAssessment;Username=git_assessment_dbuser;password=pN{:4We>f5N2-a?Y;port=5432"
+  },
   "AllowedHosts": "*"
 }
