--- a/GitAssessment.Api/GitAssessment.Api.csproj
+++ b/GitAssessment.Api/GitAssessment.Api.csproj
@@ -9,7 +9,12 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.14.0" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="6.0.4" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\GitAssessment.Domain\GitAssessment.Domain.csproj" />
   </ItemGroup>
 
 </Project>
