Get all word types: api/word-types

--- a/GitAssessment.Api/GitAssessment.Api.csproj
+++ b/GitAssessment.Api/GitAssessment.Api.csproj
@@ -19,6 +19,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\GitAssessment.Domain\GitAssessment.Domain.csproj" />
+    <ProjectReference Include="..\GitAssessment.Services\GitAssessment.Services.csproj" />
   </ItemGroup>
 
 </Project>
