--- a/GitAssessment.Api/appsettings.json
+++ b/GitAssessment.Api/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "AppDbContext": "Host=127.0.0.1;Database=TIHGitAssessment;Username=git_assessment_dbuser;password=pN{:4We>f5N2-a?Y;port=5432"
+    "AppDbContext": "Host=db;Database=TIHGitAssessment;Username=git_assessment_dbuser;password=pN{:4We>f5N2-a?Y;port=5432"
   },
   "AllowedHosts": "*"
 }
